<resources>
    <string name="app_name">PostsTest</string>
    <string name="action_refresh">Refresh</string>

    <string name="post_details_comment_title">Comments</string>
    <string name="post_details_desc_title">Description</string>
    <string name="post_details_user_title">User</string>
    <string name="post_details_lorem">lkacnkdjsbcksdbcskhvbskhvbskvhsfbkvhsbvkhsvbksh</string>
    <string name="post_detail_username">Name:</string>
    <string name="post_detail_user_email">Email:</string>
    <string name="post_details_user_phone">Phone:</string>
    <string name="post_details_user_web">Website:</string>

    <string name="fragment_favorites_empty">No favorites saved</string>
    <string name="fragment_all_posts_empty">No Posts loaded</string>
    <string name="network_error">No favorites saved</string>

    <string name="dialog_confirm_title">Are You Sure?</string>
    <string name="dialog_delete_message">Do you really want to delete all the posts?</string>
    <string name="dialog_delete_post_message">Do you really want to delete this post?</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_confirm">Ok</string>
</resources>
